infra/kubernetes/app/overlays/hml/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urbana-connect
spec:
  template:
    spec:
      imagePullSecrets:
        - name: container-registry-credentials
      containers:
        - name: urbana-connect
          readinessProbe:
            httpGet:
              path: /api/v1/readiness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
